# rag-robot-automation

./: .gitignore  config.yaml  requirements.txt  setup_env.sh  verify_installation.py
data/knowledge_base/: best_practices.txt  control_system_parameters.txt  safety_protocols.txt  task_specifications.txt  troubleshooting_guide.txt
rag_system/: README.md  config.py  embedder.py  interactive_rag.py  llm_interface.py  rag_pipeline.py  retriever.py  vector_db.py
ros2_ws/log/: latest_build
ros2_ws/src/decision_maker/: package.xml  setup.cfg  setup.py
ros2_ws/src/decision_maker/decision_maker/: __init__.py  decision_maker_node.py
ros2_ws/src/gazebo_robot_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/gazebo_robot_bridge/gazebo_robot_bridge/: __init__.py  gazebo_bridge_node.py
ros2_ws/src/gazebo_robot_bridge/resource/: gazebo_robot_bridge
ros2_ws/src/rag_server/: package.xml  setup.cfg  setup.py
ros2_ws/src/rag_server/launch/: complete_system.launch.py  rag_server.launch.py
ros2_ws/src/rag_server/rag_server/: __init__.py  rag_server_node.py
ros2_ws/src/rag_server/resource/: rag_server
ros2_ws/src/robot_controller/: package.xml  setup.py
ros2_ws/src/robot_controller/robot_controller/: __init__.py  robot_controller_node.py
simulation/launch/: gazebo.launch.py
simulation/models/rag_robot/: model.config  model.sdf  model.urdf
simulation/worlds/: rag_robot.world
